--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ body, p, a, button {
 
 .offer-card {
     width: 30%;
+    height: 200px;
     float: left;
     margin-bottom: 50px;
     padding: 25px 10px 25px 40px;
@@ -555,13 +556,12 @@ padding: 20px 0;
     width: 70%;
     height: 100%;
     margin: auto;
-    position: relative;
-    z-index: 1;
 }
 .sec6-card{
     width: 25%;
-    height: 100%;
     float: left;
+    position: relative;
+    z-index: 1;
     margin-top: 15%;
 }
 .sec6-icon{
@@ -580,14 +580,14 @@ padding: 20px 0;
 /* **********************************sec7************************************ */
 .price-cotainer{
     width: 70%;
-    height: 100vh;
+    height: 80vh;
     margin: auto;
     text-align: center;
 }
 .price-cotainer-title {
     font-size: 40px;
     padding: 10px;
-    /* margin-top: 160px; */
+    margin-top: 170px;
 }
 .price-cotainer hr{
     width: 10%;
@@ -794,7 +794,6 @@ padding: 20px 0;
     height:220px;
     margin: auto;
     position: relative;
-    /* overflow: auto; */
 }
 .ourteam-img::after{
     position: absolute;
@@ -828,7 +827,6 @@ padding: 20px 0;
     background-color: #412d19;
     z-index: 2;
     visibility: hidden;
-    /* padding: 5px; */
 }
 .ourteam-caard:hover .ourteam-icons{
     visibility: visible;
@@ -842,7 +840,7 @@ padding: 20px 0;
 /* **************************************sec10************************************* */
 .news-container{
     width: 70%;
-    height: 80vh;
+    height: 85vh;
     margin: auto;
     text-align: center;
 }
