--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body, p, a, button {
 .blog-list {
     position: absolute;
     width: 180px;
-     background-color: rgba(65, 45, 25,1);
+    background-color: rgba(65, 45, 25,1);
     border-radius: 10px;
     text-align: center;
     padding: 8px;
@@ -199,7 +199,8 @@ body, p, a, button {
     position: relative;
     margin: auto;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
+    overflow: auto;
 }
 
 .welcome-card {
@@ -222,7 +223,7 @@ body, p, a, button {
 
 .welcome-container h2 {
     font-size: 40px;
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .welcome-container hr {
@@ -280,7 +281,6 @@ body, p, a, button {
     width: 100%;
     height: 100%;
     opacity: 0.8;
-    /* transition: 0.5s; */
 }
 
 /* *********************sec3**************************** */
@@ -289,6 +289,8 @@ body, p, a, button {
     height: 100vh;
     text-align: center;
     position: relative;
+    overflow: auto;
+    margin-top: 50px;
 }
 
 .featured-container h2 {
@@ -385,6 +387,7 @@ body, p, a, button {
     margin-top: 50px;
     text-align: center;
     position: relative;
+    overflow: auto;
 }
 
 .offer-card {
@@ -471,12 +474,14 @@ body, p, a, button {
     margin: auto;
     margin-top: 100px;
     position: relative;
+    overflow: auto;
 }
 
 .why-left {
     float: left;
     width: 70%;
     padding: 25px 15px;
+    overflow: auto;
 }
 .why-left h2{
     font-size: 40px;
@@ -494,7 +499,7 @@ body, p, a, button {
     color: #8a8d84ee;
 }
 .why-p{
-padding: 20px 0;
+    padding: 20px 0;
 }
  .why-icon{
     color: #412d19;
@@ -542,6 +547,7 @@ padding: 20px 0;
     background-attachment: fixed;
     text-align: center;
     position: relative;
+    overflow: auto;
 }
 .sec6-container::after{
     position: absolute;
@@ -583,11 +589,13 @@ padding: 20px 0;
     height: 80vh;
     margin: auto;
     text-align: center;
+    overflow: auto;
+    margin-top: 50px;
 }
 .price-cotainer-title {
     font-size: 40px;
     padding: 10px;
-    margin-top: 170px;
+    margin-top: 50px;
 }
 .price-cotainer hr{
     width: 10%;
@@ -681,10 +689,13 @@ padding: 20px 0;
     background-attachment: fixed;
     background-size: cover;
     position: relative;
+    overflow: auto;
+    margin-top: 100px;
 }
 .creators-container::after{
     position: absolute;
     top: 0;
+    left: 0;
     content: "";
     width: 100%;
     height: 100%;
@@ -704,6 +715,7 @@ padding: 20px 0;
     position: relative;
     margin-top: 11%;
     padding-left: 30px;
+    overflow: auto;
 }
 .creator h2 {
     font-size: 40px;
@@ -738,15 +750,17 @@ padding: 20px 0;
 /* *********************************sec9******************************* */
 .ourteam-container{
     width: 70%;
-    height: 80vh;
+    height: 70vh;
     margin: auto;
     text-align: center;
     position: relative;
+    overflow: auto;
+    margin-top: 50px;
 }
 .ourteam-container h2{
     font-size: 40px;
-    padding:70px 0 5px 0;
-    margin-top: 150px;
+    padding-bottom: 5px;
+    margin-top: 50px;
 }
 .ourteam-container hr{
     width: 10%;
@@ -761,7 +775,8 @@ padding: 20px 0;
     border: 1px solid #412d19;
     padding: 20px 0;
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
+    overflow: auto;
 }
 .ourteam-caard::after{
     position: absolute;
@@ -840,9 +855,11 @@ padding: 20px 0;
 /* **************************************sec10************************************* */
 .news-container{
     width: 70%;
-    height: 85vh;
+    height: 80vh;
     margin: auto;
     text-align: center;
+    overflow: auto;
+    margin-top: 50px;
 }
 .news-container h2{
     font-size: 40px;
@@ -862,6 +879,7 @@ padding: 20px 0;
     border: 1px solid #412d19;
     border-radius: 10px;
     position: relative;
+    overflow: auto;
 }
 .news-card::after{
     position: absolute;
@@ -933,6 +951,7 @@ padding: 20px 0;
 .fotter-container{
     width: 100%;
     background-color: #412d19;
+    margin-top: 50px;
 }
 .fotter-card{
     width: 40%;
